<resources>
    <string name="app_name">JNJ CUBA 2019</string>
    <string name="title_activity_contenido">Contenido</string>
    <string name="title_activity_principal">Principal</string>
    <string name="title_inicio">Inicio</string>
    <string name="title_calendario">Calendario</string>
    <string name="title_mapa">MAPA</string>
    <string name="title_apostoles">Patronos</string>
    <string name="title_historia">Galería JNJ</string>
    <string name="title_favoritos">Me gustan</string>
    <string name="title_recordatorios">Recordatorios</string>
    <string name="title_comunicar">Contáctenos</string>
    <string name="title_eucaristia">Vive la Eucaristía</string>
    <string name="title_examen">Examen de conciencia</string>
    <string name="title_cantos">Cantos</string>
    <string name="title_otros">Más</string>
    <string name="dia1">Día 1</string>
    <string name="dia2">Día 2</string>
    <string name="dia3">Día 3</string>
    <string name="texto_oracion_viacrucis">
    La cruz de Jesucristo es la cruz del hombre. De un modo misterioso, Él estaba ya cargando con todos los pesos humanos. ¿Quién puede calcular esta carga? De un modo misterioso Él está compartiendo todos los sufrimientos humanos.
        \n\nHoy queremos acercarnos a estos sufrimientos, los sufrimientos de Cristo, que son los sufrimientos de los hombres, y compartirlos. No basta compadecer a Cristo, es necesario padecer con Cristo. Padecer con los hermanos, que son también “Cristos en el camino de la vida”. Cada vez que aliviamos a un hermano que camina con la cruz, estamos aliviando a Jesús en su largo viacrucis. Él te lo agradece. Tú mismo, sin saber cómo, te sentirás aliviado.
        \n\nOración: «Señor, ayúdanos a ver en las penas y los conflictos de cada día oportunidades para crecer como personas y asemejarnos más a ti. Danos fuerza para vivir en medio de ellos con paciencia, pero con valentía, firmemente confiados en tu ayuda; porque solo muriendo contigo resucitaremos contigo.» (Madre Teresa de Calcuta).
    </string>
    <string name="estaciones_viacrucis_1"> Jesús condenado a muerte
\nV/ Te adoramos, oh Cristo y te bendecimos
\nR/ Porque con tu santa Cruz redimiste al mundo
\n\nJesús... ¡VEN A NUESTRO ENCUENTRO! Enséñanos en esta noche que, lejos de condenar, hemos de trabajar por una nueva humanidad en nuestra tierra y a no caer en la tentación de lavarnos las manos ante situaciones que piden nuestra opinión o decisión.
</string>
    <string name="estaciones_viacrucis_2"> El Señor con la Cruz a cuestas.
\nV/ Te adoramos, oh Cristo y te bendecimos
\nR/ Porque con tu santa Cruz redimiste al mundo
\n\nSabemos, Señor, que la fuerza nos viene de la cruz y que en ella se esconde la victoria y el secreto de nuestra felicidad… Ayúdanos a entender el valor del sacrificio y de la sinceridad de nuestros gestos en favor de los demás. Y si el camino es áspero y las cargas insoportables que busquemos la fuerza que viene de lo alto.
</string>
    <string name="estaciones_viacrucis_3"> Cae Jesús en tierra por primera vez
\nV/ Te adoramos, oh Cristo y te bendecimos
\nR/ Porque con tu santa Cruz redimiste al mundo
\n\nJesús; Tú que salvas y levantas al que a Ti grita, no dejes que pasemos de largo de aquellos que están arrojados en el puro asfalto bajo el peso de una cruz. Danos ojos para ver y, sobre todo, brazos para levantar.
 </string>
    <string name="estaciones_viacrucis_4"> Jesús encuentra a su madre.
\nV/ Te adoramos, oh Cristo y te bendecimos
\nR/ Porque con tu santa Cruz redimiste al mundo
\n\nJesús; ayúdanos en esta noche, como María, a dar sin recibir nada a cambio...pero sobre todo a salir de las catacumbas de nuestra cobardía para razón de nuestra esperanza. Así, también nosotros seremos “madres”.
</string>
    <string name="estaciones_viacrucis_5">El Señor ayudado por un Cirineo
\nV/ Te adoramos, oh Cristo y te bendecimos
\nR/ Porque con tu santa Cruz redimiste al mundo
\n\nAyúdanos, Señor, en esta noche a construir un cielo nuevo y una tierra nueva arrimando y brindando nuestro hombro a toda situación que nos parezca injusta y dolorosa.
 </string>
    <string name="estaciones_viacrucis_6"> La Verónica enjuga el rostro a Jesús.
\nV/ Te adoramos, oh Cristo y te bendecimos
\nR/ Porque con tu santa Cruz redimiste al mundo
\n\nHoy, como ayer, todos podemos conseguir el mejor lienzo de DIOS para nuestras casas y para nuestras vidas: haciendo el bien sin mirar a quién. El amor gratuito se da sin condiciones y sin analizar situaciones: simplemente…se regala. ¿Hay algo mejor?
 </string>
    <string name="estaciones_viacrucis_7">Jesús cae en tierra por segunda vez.
\nV/ Te adoramos, oh Cristo y te bendecimos
\nR/ Porque con tu santa Cruz redimiste al mundo
\n\nQueremos salir, Señor, de un agujero e irremediablemente nos precipitamos en otro. Pretendemos sonreír y lloramos; ansiamos levantarnos y, de nuevo, caemos bajo las cosas y los defectos de siempre. No nos dejes, Señor, sumergidos en el fatalismo de la propia debilidad; no nos dejes catapultados en la insensibilidad; en dar por bueno lo que es mediocre; en sentenciar como virtud lo que es cántaro agrietado. No permitas, Señor, que se endurezca la piel al peso de la cruz de cada día. Y si caemos Señor, que recordemos, que no es débil quién cae, sino fuerte el que se levanta.
 </string>
    <string name="estaciones_viacrucis_8">Jesús habla a las mujeres de Jerusalén.
\nV/ Te adoramos, oh Cristo y te bendecimos
\nR/ Porque con tu santa Cruz redimiste al mundo
\n\nTú que al pie de la cruz nos dejaste como Madre a una mujer…haznos caer en la cuenta de la igualdad de hombre y mujer.... ¡háblanos Señor! para que en la defensa de la dignidad de cada persona no nos quedemos en simples palabras. Que el grito del mundo sea una llamada no al llanto y sí a nuestro compromiso personal.
 </string>
    <string name="estaciones_viacrucis_9">Cae Jesús en tierra por tercera vez.
\nV/ Te adoramos, oh Cristo y te bendecimos
\nR/ Porque con tu santa Cruz redimiste al mundo
\n\nAyúdanos a levantar nuestros ojos a Ti y, en Ti, encontrar siempre oportuna respuesta. ¿Tres veces? No, Señor; ¡mil veces caes con el hombre cuando cae aplastado por las cruces que le llueven cada día sobre sus hombros!
 </string>
    <string name="estaciones_viacrucis_10">Jesús despojado de sus vestidos.
\nV/ Te adoramos, oh Cristo y te bendecimos
\nR/ Porque con tu santa Cruz redimiste al mundo
\n\nSeñor, tú te has despojado de ti mismo, enséñanos a despojarnos de aquello que no nos deja “SER” felices.
</string>
    <string name="estaciones_viacrucis_11"> Jesús clavado en la cruz.
\nV/ Te adoramos, oh Cristo y te bendecimos
\nR/ Porque con tu santa Cruz redimiste al mundo
\n\nQue vislumbremos, desde lo alto de la cruz, ese horizonte de las grandes hazañas que realizamos a favor de los demás. Que brille el sol de la fe en aquellos instantes donde sólo vemos absurdo aparente, angustia o desilusión. Incluso, Señor, que brille el sol para aquellos que nos clavan en abundantes maderos.
</string>
    <string name="estaciones_viacrucis_12">Jesús muere en la cruz.
\nV/ Te adoramos, oh Cristo y te bendecimos
\nR/ Porque con tu santa Cruz redimiste al mundo
\n\nSeguirte a ti, Señor, no es querer sólo ser mejor: ES QUERER SER DIFERENTE. Es apostar por un mundo nuevo donde brille la VIDA antes que la MUERTE. Hoy, Señor, de nuevo se repite la historia: naciste en el silencio y mueres en la soledad. Viniste al mundo bajo la mirada atenta de una Madre y das tu último suspiro regalándonos a esa misma Madre.
 </string>
    <string name="estaciones_viacrucis_13">Jesús en los brazos de la madre.
\nV/ Te adoramos, oh Cristo y te bendecimos
\nR/ Porque con tu santa Cruz redimiste al mundo
\n\nAyúdanos, Señor, a creer de verdad que aquel que entrega su vida la recobrará multiplicada en una eterna juventud más allá de las estrellas y del sol en el mismo cielo.

\n\nComo María, nos agarraremos al cuerpo inerte de Jesús, porque sabemos que Él es buena cosecha que fructificará en la mañana de Resurrección.
 </string>
    <string name="estaciones_viacrucis_14">Jesús es puesto en el sepulcro.
\nV/ Te adoramos, oh Cristo y te bendecimos
\nR/ Porque con tu santa Cruz redimiste al mundo
\n\nConcédenos sentirte vivo para que, cuando llegue el instante de nuestra partida, podamos con el corazón decirte: ¡Padre a tus manos encomiendo mi espíritu!

\n\nTe bendecimos, Señor, más que nunca en esta noche...porque sabemos que estás vivo y acompañándonos indefinidamente.

\n\nQue nos encontremos en esa otra realidad donde apunta y despunta ese silencio que ahora y, hasta el tercer día te humilla.
 </string>
    <string name="estaciones_viacrucis_15"> Jesús ha Resucitado.
\nV/ Te adoramos, oh Cristo y te bendecimos
\nR/ Porque con tu santa Cruz redimiste al mundo
\n\nTe bendecimos, Señor, te damos gracias porque tu promesa está cumplida. Cristo ha resucitado y nos ha prometido prepararnos un sitio junto a ti. Sabemos de tu fidelidad y eso nos da esperanza y estímulo para nuestra vida.

\n\nDespués del silencio y la humillación de la muerte y el sepulcro, danos, Señor, encontrarnos en esa otra realidad que tú nos has hecho descubrir con tu resurrección.
</string>
    <string name="estaciones_viacrucis_oracion_final">
    “Te suplico, Señor, que me concedas, por intercesión de tu Madre, la Virgen, que cada vez que medite tu Pasión, quede grabado en mí con marca de actualidad lo que Tú has hecho y sufrido por mí y tus constantes beneficios y gracias que recibo al contemplarte.

\n\nHaz, Señor, que, durante toda mi vida, tenga un agradecimiento inmenso del amor de tu Pasión.
\n\nAyúdame en mis deseos, Virgen Santísima de los Dolores, ya que eres mi Madre y te necesito”.

    </string>
    <string name="title_activity_actividad_ponente">Actividad_ponente</string>
    <string name="title_activity_catequesis">Catequesis</string>
</resources>